--- a/2_pytorch_workflow.ipynb
+++ b/2_pytorch_workflow.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNrQbyTn5cX6wm/P82z2u6h",
+      "authorship_tag": "ABX9TyPgSLarLqy8HuQySwUMs8Ke",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -61,9 +61,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KmlBT6Okm8gT",
-        "outputId": "b3796add-e41b-4021-9453-e4ee7656a184"
+        "outputId": "16fc8108-a116-48a7-ab5c-45541d290729"
       },
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -78,7 +78,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 1
+          "execution_count": 2
         }
       ]
     },
@@ -97,9 +97,9 @@
           "height": 35
         },
         "id": "TE2QaW6xm9eg",
-        "outputId": "c12634a0-7997-4624-a523-226f802f8b71"
+        "outputId": "e74dde18-07d5-4545-adf2-2edf59b074b3"
       },
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -112,7 +112,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 3
         }
       ]
     },
@@ -162,9 +162,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e2d4ea74-1f17-4637-be93-a147fad67d1e"
+        "outputId": "5ea53acc-4abf-4479-d783-714b20754be6"
       },
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -193,7 +193,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 4
         }
       ]
     },
@@ -207,9 +207,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ALok5cnpZ4ts",
-        "outputId": "61b82fe1-af88-471a-e3b2-3cccb92a0468"
+        "outputId": "9fae7bd5-ac84-4fc0-c03f-ee28339ffa41"
       },
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -219,7 +219,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 5
         }
       ]
     },
@@ -247,9 +247,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "l6hV6FZaa4lW",
-        "outputId": "266d6dc1-997b-4236-8061-83bd7bcd8ab9"
+        "outputId": "b99df516-6684-4d7f-fc22-b4eba99a8e52"
       },
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -259,7 +259,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 6
         }
       ]
     },
@@ -286,9 +286,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uymbGaEpdvEZ",
-        "outputId": "4a203256-6194-4628-a3ed-ebc3db6cf197"
+        "outputId": "8850ee17-9784-48fc-a6b3-3c5ff964ca6d"
       },
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -377,7 +377,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 7
         }
       ]
     },
@@ -403,7 +403,7 @@
       "metadata": {
         "id": "crrgIlrwewbH"
       },
-      "execution_count": 7,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -417,9 +417,9 @@
           "height": 599
         },
         "id": "34iCrNsRfdFy",
-        "outputId": "ca86bb3e-9e86-4598-da4d-dfb2c41a109a"
+        "outputId": "edef7197-b73e-452d-9d96-8a24139526f0"
       },
-      "execution_count": 8,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "display_data",
@@ -476,7 +476,7 @@
       "metadata": {
         "id": "4P7r54eHMc6d"
       },
-      "execution_count": 9,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -523,9 +523,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lPAsqQON-gnM",
-        "outputId": "6c72389b-21bc-47d3-b494-2cc6241258bb"
+        "outputId": "3a77339e-cd8d-4ed3-f170-cd1b6a6988be"
       },
-      "execution_count": 10,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -538,7 +538,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 11
         }
       ]
     },
@@ -553,9 +553,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WsRgGJed-zFO",
-        "outputId": "c8bdc5c7-fa60-414a-f804-625ee4151e7f"
+        "outputId": "5c0c0c25-d017-49cc-b3c2-cba55da3f77a"
       },
-      "execution_count": 11,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -565,7 +565,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 12
         }
       ]
     },
@@ -579,9 +579,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "olzBJg-6_mCw",
-        "outputId": "5b700a3f-2883-477d-a38c-9b3416db31e2"
+        "outputId": "0e560a56-ff3c-458c-f7ac-c6c523069dc5"
       },
-      "execution_count": 12,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -591,7 +591,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 13
         }
       ]
     },
@@ -618,9 +618,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ngxo-KXkBDgB",
-        "outputId": "39432f61-83bc-4422-af07-3e47e744ca9b"
+        "outputId": "e56dc704-b3fe-419b-b889-f9681f4cdba2"
       },
-      "execution_count": 13,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -649,7 +649,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 14
         }
       ]
     },
@@ -664,9 +664,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qk-FuHooDKtl",
-        "outputId": "859a4604-44b5-4d33-f4b0-5bce16c816cf"
+        "outputId": "61db8133-2c5a-4f58-cc6f-a3ffdd940c22"
       },
-      "execution_count": 14,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -685,7 +685,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 15
         }
       ]
     },
@@ -707,9 +707,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jRWncydqBIcr",
-        "outputId": "7b0cd65a-6ac1-4c31-f676-28299edf62f2"
+        "outputId": "7b30f8cf-2577-4c60-e834-774341f2c5c0"
       },
-      "execution_count": 15,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -728,7 +728,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 16
         }
       ]
     },
@@ -751,9 +751,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LFC4xhHsBceJ",
-        "outputId": "41386ce6-8def-4d6f-f5c9-440e24faac8c"
+        "outputId": "1550ad0b-bfa1-4bde-ea4e-8344a45c413c"
       },
-      "execution_count": 16,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -772,7 +772,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 17
         }
       ]
     },
@@ -787,9 +787,9 @@
           "height": 599
         },
         "id": "CHUwX_NqCp4X",
-        "outputId": "b85015fc-7f15-414e-f0ab-4ba5c5a2732a"
+        "outputId": "569f3c60-de4d-4c07-8e0c-6f67e58149a7"
       },
-      "execution_count": 17,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "display_data",
@@ -843,9 +843,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mTPhM1v9TQ0T",
-        "outputId": "9d8a2f14-6d05-4c98-adb7-c3d46e61be1b"
+        "outputId": "e3cd2b40-15b8-430f-aa11-efc24834790f"
       },
-      "execution_count": 18,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -858,7 +858,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 19
         }
       ]
     },
@@ -873,9 +873,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "efRUsfftUo0x",
-        "outputId": "5677148d-c7a6-47b6-cd6c-2e46c72dbdc7"
+        "outputId": "57cca24d-75c7-4c63-bf9c-648c3c9583d0"
       },
-      "execution_count": 19,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -885,7 +885,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 20
         }
       ]
     },
@@ -903,7 +903,7 @@
       "metadata": {
         "id": "qYsY_yJPUsRo"
       },
-      "execution_count": 20,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -1002,9 +1002,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a090fec3-bb09-44e8-acd5-5f90efa103b4"
+        "outputId": "a7266e3c-626c-4b31-e6e4-d1bddcbc4785"
       },
-      "execution_count": 21,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -1104,9 +1104,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d382b743-48f8-498f-92ad-3c59e044ad84"
+        "outputId": "52743b7c-2441-4b30-a942-52c6d6d01faf"
       },
-      "execution_count": 22,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1116,7 +1116,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 22
+          "execution_count": 23
         }
       ]
     },
@@ -1130,9 +1130,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aoUkQVqj5bdw",
-        "outputId": "c0271cc8-4f66-43b9-9cce-5e7342853fd1"
+        "outputId": "e5302c6d-3e7c-4ea1-d09d-97b4d9d4be73"
       },
-      "execution_count": 23,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1142,7 +1142,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 24
         }
       ]
     },
@@ -1156,9 +1156,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aqWw4BgQ9ZL-",
-        "outputId": "2648394e-544d-413a-bc71-c72589aaa171"
+        "outputId": "796d3a4d-1913-418b-a0db-f1ab2ed36fac"
       },
-      "execution_count": 24,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1168,7 +1168,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 24
+          "execution_count": 25
         }
       ]
     },
@@ -1186,9 +1186,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 599
         },
-        "outputId": "e35aea46-2723-446c-abef-6d486f73c71d"
+        "outputId": "6ad01ad5-2ccc-4611-d490-a9b52887a105"
       },
-      "execution_count": 25,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1212,9 +1212,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "269f3e52-3718-408d-ff5a-375cbe3da901"
+        "outputId": "314a1a51-ce00-4529-acac-1a1055b6535f"
       },
-      "execution_count": 26,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1283,7 +1283,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 26
+          "execution_count": 27
         }
       ]
     },
@@ -1297,7 +1297,7 @@
       "metadata": {
         "id": "AsfVExdjVdO_"
       },
-      "execution_count": 27,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -1317,19 +1317,19 @@
           "height": 489
         },
         "id": "BPwzPGjvHAb3",
-        "outputId": "da46b706-dc89-43c3-be77-4a54e730ac8a"
+        "outputId": "7303cffc-2e7d-4910-f662-e84b8263779e"
       },
-      "execution_count": 28,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.legend.Legend at 0x79757a49b0a0>"
+              "<matplotlib.legend.Legend at 0x7c18ab023e20>"
             ]
           },
           "metadata": {},
-          "execution_count": 28
+          "execution_count": 29
         },
         {
           "output_type": "display_data",
@@ -1344,12 +1344,116 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Saving a model in PyTorch\n",
+        "\n",
+        "There are three main methods you should know about for saving and loading models in PyTorch.\n",
+        "\n",
+        "1. `torch.save()` - allows you save a PyTorch object in Python's pickle format\n",
+        "2. `torch.load()` - allows you load a saved PyTorch object\n",
+        "3. `torch.nn.Module.load_state_dict()` - this allows to load a model's saved state dictionary\n",
+        "\n",
+        "PyTorch save & load code tutorial + extra-curriculum - https://pytorch.org/tutorials/beginner/saving_loading_models.html"
+      ],
+      "metadata": {
+        "id": "e7gxbFM2HAxP"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model_0.state_dict()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "E2DMkeCQjCnA",
+        "outputId": "b1b64d73-92fc-4b92-d203-e11f332e7be9"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "OrderedDict([('weights', tensor([0.6990])), ('bias', tensor([0.3093]))])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Saving our PyTorch model\n",
+        "from pathlib import Path\n",
+        "\n",
+        "# 1. Create models directory\n",
+        "MODEL_PATH = Path(\"models\")\n",
+        "MODEL_PATH.mkdir(parents=True, exist_ok=True)\n",
+        "\n",
+        "# 2. Create model save path\n",
+        "MODEL_NAME = \"02_pytorch_workflow_.pth\"\n",
+        "MODEL_SAVE_PATH = MODEL_PATH / MODEL_NAME\n",
+        "\n",
+        "# 3. Save the model state dict\n",
+        "print(f\"Saving model to: {MODEL_SAVE_PATH}\")\n",
+        "torch.save(obj=model_0.state_dict(),\n",
+        "           f=MODEL_SAVE_PATH)\n"
+      ],
+      "metadata": {
+        "id": "ad_QmCZMlLhD",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "cc101761-73fc-45fd-ed03-f9e61e81912d"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Saving model to: models/02_pytorch_workflow_.pth\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!ls -l models"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "i89Jb6NuXLEc",
+        "outputId": "137c742e-a029-40cc-d8ae-1bd6d9033d92"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "total 4\n",
+            "-rw-r--r-- 1 root root 1574 Sep 24 14:09 02_pytorch_workflow_.pth\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "e7gxbFM2HAxP"
+        "id": "eveTNnIYXsMW"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     }
   ]
