Splitting the dataset

--- a/3_pytorch_classification.ipynb
+++ b/3_pytorch_classification.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOBgjLFPlH1wrsmuh8/oK2C",
+      "authorship_tag": "ABX9TyNrk4ah1NPjd/2jTIL8fBOE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,7 +56,7 @@
       "metadata": {
         "id": "CZH98HErE-Eo"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -75,7 +75,7 @@
       "metadata": {
         "id": "4FqclzRWFlnC"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -88,9 +88,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eQRArdk8Fy6m",
-        "outputId": "aff17455-adb8-4e3d-b909-c4e65ea7de5b"
+        "outputId": "9e96556c-a7ae-4a4b-8a93-56e76b238c1c"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -100,7 +100,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 3
         }
       ]
     },
@@ -115,9 +115,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8aDfuBx5F1fq",
-        "outputId": "46b05276-15f5-40b6-d6c1-e3da5fe931ad"
+        "outputId": "e26591f7-ba52-4c9f-a859-bc1b7a817598"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -149,9 +149,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 363
         },
-        "outputId": "be1e0e4a-9d5a-4f98-fbe2-e13cfadf33a2"
+        "outputId": "e85c9632-c1b0-41d0-99dc-d66b9979eb8c"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -171,7 +171,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-a308620e-db2a-4ef5-988a-9f6e0f2da434\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-695a3850-7527-49dd-89e9-f5b01a34b703\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -262,7 +262,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a308620e-db2a-4ef5-988a-9f6e0f2da434')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-695a3850-7527-49dd-89e9-f5b01a34b703')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -314,12 +314,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-a308620e-db2a-4ef5-988a-9f6e0f2da434 button.colab-df-convert');\n",
+              "        document.querySelector('#df-695a3850-7527-49dd-89e9-f5b01a34b703 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-a308620e-db2a-4ef5-988a-9f6e0f2da434');\n",
+              "        const element = document.querySelector('#df-695a3850-7527-49dd-89e9-f5b01a34b703');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -339,8 +339,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-98cfe15f-6e13-4be8-98ab-b7f80dcfcbd9\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-98cfe15f-6e13-4be8-98ab-b7f80dcfcbd9')\"\n",
+              "<div id=\"df-2b0cab16-f8a9-474f-bc4d-3017b8f87b03\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-2b0cab16-f8a9-474f-bc4d-3017b8f87b03')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -459,7 +459,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-98cfe15f-6e13-4be8-98ab-b7f80dcfcbd9 button');\n",
+              "        document.querySelector('#df-2b0cab16-f8a9-474f-bc4d-3017b8f87b03 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -476,7 +476,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 5
         }
       ]
     },
@@ -495,19 +495,19 @@
           "height": 447
         },
         "id": "BvBFtezt5QKM",
-        "outputId": "475abc2c-23c7-46bd-a8e6-96591d29424a"
+        "outputId": "e0d829b8-dcad-404c-9218-e967bb0e4b82"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.collections.PathCollection at 0x7dd3367f7e80>"
+              "<matplotlib.collections.PathCollection at 0x7c65ee832680>"
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 6
         },
         {
           "output_type": "display_data",
@@ -531,10 +531,289 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### 1.1 Check input and output shapes"
+      ],
+      "metadata": {
+        "id": "Ut-iIpAnkBHP"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X.shape, y.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-LBzXhrMkVId",
+        "outputId": "6cb63f35-a856-4ebb-cab9-f00eb3cbf68e"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "((1000, 2), (1000,))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IzcJBNB9kdtz",
+        "outputId": "3287cd2b-4010-4ba2-a9be-274123a0477b"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 0.75424625,  0.23148074],\n",
+              "       [-0.75615888,  0.15325888],\n",
+              "       [-0.81539193,  0.17328203],\n",
+              "       ...,\n",
+              "       [-0.13690036, -0.81001183],\n",
+              "       [ 0.67036156, -0.76750154],\n",
+              "       [ 0.28105665,  0.96382443]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# View the first example of features and labels\n",
+        "X_sample = X[0]\n",
+        "y_sample = y[0]\n",
+        "print(f\"Sample input features: {X_sample}\")\n",
+        "print(f\"Sample label: {y_sample}\")\n",
+        "print(f\"Shapes for sample of X: {X_sample.shape}\")\n",
+        "print(f\"Shape for sample of y: {y_sample.shape}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pj8kmuZBkg6w",
+        "outputId": "81a4918a-0544-4ac7-b6d3-571586bc8a0e"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Sample input features: [0.75424625 0.23148074]\n",
+            "Sample label: 1\n",
+            "Shapes for sample of X: (2,)\n",
+            "Shape for sample of y: ()\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 1.2 Turn data into tensors and create train and test splits"
+      ],
+      "metadata": {
+        "id": "hIVo8t4Mk8kY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import torch\n",
+        "from torch import nn\n",
+        "torch.__version__"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "OZ-n7cJnlKVS",
+        "outputId": "7f7977fc-6335-4ce7-bb61-d7f1efaa10a6"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'2.4.1+cu121'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(X), type(y)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ri1n21o-ldPv",
+        "outputId": "041d4953-e890-4038-c706-c24d5c311a3d"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(numpy.ndarray, numpy.ndarray)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Turn data into tensors\n",
+        "X = torch.from_numpy(X).type(torch.float)\n",
+        "y = torch.from_numpy(y).type(torch.float)"
+      ],
+      "metadata": {
+        "id": "8WOJvxEulQdh"
+      },
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X[:5], y[:5]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-Eqyx8DelkJD",
+        "outputId": "d4387984-6ff5-4a21-f11b-2a1717a44ba1"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(tensor([[ 0.7542,  0.2315],\n",
+              "         [-0.7562,  0.1533],\n",
+              "         [-0.8154,  0.1733],\n",
+              "         [-0.3937,  0.6929],\n",
+              "         [ 0.4422, -0.8967]]),\n",
+              " tensor([1., 1., 1., 1., 0.]))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(X), X.dtype, y.dtype"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1Vpcpxzsl0SO",
+        "outputId": "deda5510-cc7f-47b4-a6d2-aca6846acf2d"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(torch.Tensor, torch.float32, torch.float32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Split data into training and test sets\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X,\n",
+        "                                                    y,\n",
+        "                                                    test_size=0.2, # 0.2 = 20% of data will be test & 80% will be train\n",
+        "                                                    random_state=42)"
+      ],
+      "metadata": {
+        "id": "N0rPWnktl0o8"
+      },
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "len(X_train),len(X_test),len(y_train),len(y_test)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0n85S9C2Aa02",
+        "outputId": "ba3f609a-c71c-4f39-a1bc-1e9bd63bddbe"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(800, 200, 800, 200)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "Ut-iIpAnkBHP"
+        "id": "RBCasAWoAgRi"
       },
       "execution_count": null,
       "outputs": []
