--- a/3_pytorch_classification.ipynb
+++ b/3_pytorch_classification.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNrk4ah1NPjd/2jTIL8fBOE",
+      "gpuType": "T4",
+      "authorship_tag": "ABX9TyMnG2V1riB7mSM1UJqJbJfO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -13,7 +14,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -56,7 +58,7 @@
       "metadata": {
         "id": "CZH98HErE-Eo"
       },
-      "execution_count": 1,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -75,7 +77,7 @@
       "metadata": {
         "id": "4FqclzRWFlnC"
       },
-      "execution_count": 2,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -88,9 +90,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eQRArdk8Fy6m",
-        "outputId": "9e96556c-a7ae-4a4b-8a93-56e76b238c1c"
+        "outputId": "cbb3482d-bd7a-4e49-bfb5-506057e7a0b7"
       },
-      "execution_count": 3,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -100,7 +102,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 20
         }
       ]
     },
@@ -115,9 +117,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8aDfuBx5F1fq",
-        "outputId": "e26591f7-ba52-4c9f-a859-bc1b7a817598"
+        "outputId": "f43b4659-55b5-4c3d-952f-3a71a3faac66"
       },
-      "execution_count": 4,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -149,9 +151,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 363
         },
-        "outputId": "e85c9632-c1b0-41d0-99dc-d66b9979eb8c"
+        "outputId": "2d98a861-93e9-4e75-a383-508df183c38d"
       },
-      "execution_count": 5,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -171,7 +173,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-695a3850-7527-49dd-89e9-f5b01a34b703\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-e5775677-1a55-4f3d-9e02-77a8692fe801\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -262,7 +264,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-695a3850-7527-49dd-89e9-f5b01a34b703')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e5775677-1a55-4f3d-9e02-77a8692fe801')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -314,12 +316,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-695a3850-7527-49dd-89e9-f5b01a34b703 button.colab-df-convert');\n",
+              "        document.querySelector('#df-e5775677-1a55-4f3d-9e02-77a8692fe801 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-695a3850-7527-49dd-89e9-f5b01a34b703');\n",
+              "        const element = document.querySelector('#df-e5775677-1a55-4f3d-9e02-77a8692fe801');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -339,8 +341,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-2b0cab16-f8a9-474f-bc4d-3017b8f87b03\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-2b0cab16-f8a9-474f-bc4d-3017b8f87b03')\"\n",
+              "<div id=\"df-50881623-4f23-4f39-9ddb-bc761f904e07\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-50881623-4f23-4f39-9ddb-bc761f904e07')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -459,7 +461,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-2b0cab16-f8a9-474f-bc4d-3017b8f87b03 button');\n",
+              "        document.querySelector('#df-50881623-4f23-4f39-9ddb-bc761f904e07 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -476,7 +478,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 22
         }
       ]
     },
@@ -495,19 +497,19 @@
           "height": 447
         },
         "id": "BvBFtezt5QKM",
-        "outputId": "e0d829b8-dcad-404c-9218-e967bb0e4b82"
+        "outputId": "f3198864-0f68-451e-83f9-217a8c1e69fa"
       },
-      "execution_count": 6,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.collections.PathCollection at 0x7c65ee832680>"
+              "<matplotlib.collections.PathCollection at 0x7972c1fd36a0>"
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 23
         },
         {
           "output_type": "display_data",
@@ -549,9 +551,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-LBzXhrMkVId",
-        "outputId": "6cb63f35-a856-4ebb-cab9-f00eb3cbf68e"
+        "outputId": "82544f19-872c-4bce-b277-a2e0adf6fa82"
       },
-      "execution_count": 7,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -561,7 +563,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 24
         }
       ]
     },
@@ -575,9 +577,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IzcJBNB9kdtz",
-        "outputId": "3287cd2b-4010-4ba2-a9be-274123a0477b"
+        "outputId": "d05ae078-20ef-4fbe-8565-673592864fcc"
       },
-      "execution_count": 8,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -593,7 +595,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 25
         }
       ]
     },
@@ -613,9 +615,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pj8kmuZBkg6w",
-        "outputId": "81a4918a-0544-4ac7-b6d3-571586bc8a0e"
+        "outputId": "f539e5d0-cddc-410a-d410-e987df350b8a"
       },
-      "execution_count": 9,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -651,9 +653,9 @@
           "height": 35
         },
         "id": "OZ-n7cJnlKVS",
-        "outputId": "7f7977fc-6335-4ce7-bb61-d7f1efaa10a6"
+        "outputId": "938acdfe-7b58-45e0-ffd0-56a9bb2f5ca1"
       },
-      "execution_count": 10,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -666,7 +668,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 27
         }
       ]
     },
@@ -680,9 +682,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ri1n21o-ldPv",
-        "outputId": "041d4953-e890-4038-c706-c24d5c311a3d"
+        "outputId": "84937f1b-a09c-46c0-e424-be0dd745f22c"
       },
-      "execution_count": 11,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -692,7 +694,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 28
         }
       ]
     },
@@ -706,7 +708,7 @@
       "metadata": {
         "id": "8WOJvxEulQdh"
       },
-      "execution_count": 12,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -719,9 +721,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-Eqyx8DelkJD",
-        "outputId": "d4387984-6ff5-4a21-f11b-2a1717a44ba1"
+        "outputId": "6c085785-c247-4e03-af8c-8aa86ff77163"
       },
-      "execution_count": 13,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -736,7 +738,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 30
         }
       ]
     },
@@ -750,9 +752,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1Vpcpxzsl0SO",
-        "outputId": "deda5510-cc7f-47b4-a6d2-aca6846acf2d"
+        "outputId": "05e0fc58-a96c-4f6d-d552-fb9daa49987a"
       },
-      "execution_count": 14,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -762,7 +764,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 31
         }
       ]
     },
@@ -780,7 +782,7 @@
       "metadata": {
         "id": "N0rPWnktl0o8"
       },
-      "execution_count": 16,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -793,9 +795,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0n85S9C2Aa02",
-        "outputId": "ba3f609a-c71c-4f39-a1bc-1e9bd63bddbe"
+        "outputId": "3489e90c-f8f3-4419-c889-ed2067b31fe8"
       },
-      "execution_count": 17,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -805,7 +807,144 @@
             ]
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 2.Building a model\n",
+        "\n",
+        "Let's build a model to classify our data.\n",
+        "\n",
+        "To do so, we want to:\n",
+        "1. Setup device agnositic code so our code will run on accelerator (GPU) if there is one\n",
+        "2. Construct a model (by subclassing `nn.Module`)\n",
+        "3. Define a loss function optimizer\n",
+        "4. Create a training and test loop"
+      ],
+      "metadata": {
+        "id": "RBCasAWoAgRi"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Import PyTorch and nn\n",
+        "import torch\n",
+        "from torch import nn\n",
+        "\n",
+        "# Make device agnostic code\n",
+        "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+        "device"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "_bXjqJmqB4ks",
+        "outputId": "de44ae5e-21a6-4aad-923c-1a2bc503278a"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'cuda'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Now we've setup device agnostic code let's build our model that:\n",
+        "\n",
+        "1. Subclasses `nn.Module` (almost all models in PyTorch subclass `nn.Module`)\n",
+        "2. Create 2 `nn.Linear()` layers that are capable of handling the shapes of our data\n",
+        "3. Defines a `forward()` method that outlines the forward pass (or forward computation) of the model\n",
+        "4. Instantiate an instance of our model class and send it to the target `device`"
+      ],
+      "metadata": {
+        "id": "fk9HnmW8CBnW"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 1. Construct a model that subclasses nn.Module\n",
+        "\n",
+        "class CircleModelV0(nn.Module):\n",
+        "  def __init__(self):\n",
+        "    super().__init__()\n",
+        "    # 2. Create 2 nn.Linear layers capable of handling the shapes of our data\n",
+        "    self.layer_1 = nn.Linear(in_features=2, out_features=5) # takes in 2 features and upscales to 5 features\n",
+        "    self.layer_2 = nn.Linear(in_features=5, out_features=1) # takes in 5 features from previous layer and outputs a single feature (same shape as y)\n",
+        "\n",
+        "  # 3. Define a forward() method that outlines the forward pass\n",
+        "  def forward(self, x):\n",
+        "    return self.layer_2(self.layer_1(x)) # x -> layer_1 -> layer_2 -> output\n",
+        "\n",
+        "# 4. Instantiate an instance of our model class and send it to the target device\n",
+        "model_0 = CircleModelV0().to(device)\n",
+        "model_0"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9N9cv6t4IIvX",
+        "outputId": "db537532-b1b4-433d-db24-72d9b2c702a3"
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "CircleModelV0(\n",
+              "  (layer_1): Linear(in_features=2, out_features=5, bias=True)\n",
+              "  (layer_2): Linear(in_features=5, out_features=1, bias=True)\n",
+              ")"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 36
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "next(model_0.parameters()).device"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "T1yRp7ElJWG8",
+        "outputId": "d1e7b7bd-1a04-4d90-efc1-7d7eda1439c7"
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "device(type='cuda', index=0)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 37
         }
       ]
     },
@@ -813,7 +952,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "RBCasAWoAgRi"
+        "id": "Lm-XA07WR4lH"
       },
       "execution_count": null,
       "outputs": []
